--- a/project-main/liveblog/templates/base.html
+++ b/project-main/liveblog/templates/base.html
@@ -69,7 +69,7 @@
 
 <nav class="navbar navbar-expand-lg shadow-sm bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">BLOGS</a>
+        <a class="navbar-brand" href="{% url 'blog_list' %}">BLOGS</a>
         <button
             class="navbar-toggler"
             type="button"
@@ -84,6 +84,9 @@
 
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog_list' %}">Home</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About Us</a>
                 </li>
