--- a/project-main/liveblog/templates/blog_confirm_delete.html
+++ b/project-main/liveblog/templates/blog_confirm_delete.html
@@ -1,6 +1,28 @@
-<h2>Are you sure you want to delete "{{ post.title }}"?</h2>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Yes, Delete</button>
-</form>
-<a href="{% url 'blog_list' %}">Cancel</a>
+{% extends "base.html" %}
+{% block title %}Delete Blog Post{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+
+            <div class="card border-danger shadow-sm">
+                <div class="card-header bg-danger text-white">
+                    <h4 class="mb-0">Confirm Deletion</h4>
+                </div>
+
+                <div class="card-body">
+                    <p class="lead">Are you sure you want to delete <strong>"{{ post.title }}"</strong>?</p>
+
+                    <form method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Yes, Delete</button>
+                        <a href="{% url 'blog_list' %}" class="btn btn-secondary ms-2">Cancel</a>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+{% endblock %}
